--- a/model/Untitled.ipynb
+++ b/model/Untitled.ipynb
@@ -2963,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2974,9 +2974,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 27 candidates, totalling 81 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed:  1.5min\n",
+      "[Parallel(n_jobs=-1)]: Done  81 out of  81 | elapsed:  6.4min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score='raise-deprecating',\n",
+       "             estimator=Pipeline(memory=None,\n",
+       "                                steps=[('features',\n",
+       "                                        FeatureUnion(n_jobs=None,\n",
+       "                                                     transformer_list=[('cat_pipeline',\n",
+       "                                                                        Pipeline(memory=None,\n",
+       "                                                                                 steps=[('selector',\n",
+       "                                                                                         ColumnSelector(columns=Index(['V1', 'V3', 'V4', 'V5', 'V6', 'V7'], dtype='object'))),\n",
+       "                                                                                        ('encoder',\n",
+       "                                                                                         OneHotEncoder(categorical_features=None,\n",
+       "                                                                                                       categories='auto',\n",
+       "                                                                                                       dro...\n",
+       "                                                               min_weight_fraction_leaf=0.0,\n",
+       "                                                               n_estimators='warn',\n",
+       "                                                               n_jobs=-1,\n",
+       "                                                               oob_score=False,\n",
+       "                                                               random_state=None,\n",
+       "                                                               verbose=0,\n",
+       "                                                               warm_start=False))],\n",
+       "                                verbose=False),\n",
+       "             iid='warn', n_jobs=-1,\n",
+       "             param_grid={'clf__max_depth': [3, 4, 5],\n",
+       "                         'clf__min_samples_split': [2, 3, 4],\n",
+       "                         'clf__n_estimators': [100, 150, 200]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='accuracy', verbose=3)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Build custom column selector\n",
     "class ColumnSelector(BaseEstimator, TransformerMixin):\n",
@@ -2985,13 +3037,13 @@
     "    def fit(self, X, y=None):\n",
     "        return self\n",
     "    def transform(self, X, y=None):\n",
-    "        return X[self.columns].values\n",
+    "        return X[self.columns].values.reshape(len(X), -1)\n",
     "\n",
     "pipeline = Pipeline([\n",
     "    ('features', FeatureUnion([\n",
     "        ('cat_pipeline', Pipeline([\n",
     "            ('selector', ColumnSelector(X_train.drop('V2', axis=1).columns)),\n",
-    "            ('encoder', OneHotEncoder(sparse=False))\n",
+    "            ('encoder', OneHotEncoder(sparse=False, categories='auto'))\n",
     "        ])),\n",
     "        \n",
     "        ('num_pipeline', Pipeline([\n",
@@ -3004,9 +3056,41 @@
     "])\n",
     "\n",
     "params = {\n",
-    "    ()\n",
-    "}"
+    "    'clf__n_estimators': [100, 150, 200],\n",
+    "    'clf__max_depth': [3,4,5],\n",
+    "    'clf__min_samples_split': [2,3,4],\n",
+    "}\n",
+    "\n",
+    "model = GridSearchCV(pipeline, param_grid=params, scoring='accuracy', cv=3, verbose=3, n_jobs=-1)\n",
+    "model.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9914708874535689"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
